<?xml version="1.0"?>
<package>
  <name>tuw_aruco</name>
  <version>0.0.7</version>
  <description>This is a wrapper around the marker detection library ArUco.</description>

  <maintainer email="lukas.pfeifhofer@devlabs.pro">Lukas Pfeifhofer</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>
  <author>Lukas Pfeifhofer</author> 

  <url type="website">http://wiki.ros.org/tuw_aruco</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>marker_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>marker_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export></export>
</package>