<?xml version="1.0"?>
<package>
  <name>tuw_marker_pose_estimation</name>
  <version>0.0.7</version>
  <description>This node does pose estimation for detected fiducials (marker_msgs/FiducialDetection.msg)</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>
  <author>Lukas Pfeifhofer</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>marker_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>marker_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export></export>
</package>